@@ -1,5 +1,10 @@
 2009-02-27  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Data/SimpleFeatureAccess/WellKnownBinary.cs: add parse
+	linestring
+
+2009-02-27  Scott Ellington  <scott.ellington@gmail.com>
+
 	* AssemblyInfo.cs: bump version
 
 2009-02-26  Scott Ellington  <scott.ellington@gmail.com>
